# healthisure

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  client.py  config.py  docker-compose.yml  inference.py  models.py  openenv.yaml  pyproject.toml  validate-submission.sh
.github/workflows/: sync-to-hf.yml
server/: Dockerfile  __init__.py  app.py  gradio_app.py  healthisure_environment.py  requirements.txt
server/actions/: __init__.py  handlers.py
server/data/: claims.json  cpt_codes.json  denial_codes.json  icd_codes.json  members.json  plans.json  providers.json  regulatory.json
server/graders/: __init__.py  base.py  grader1.py  grader2.py  grader3.py
server/tasks/: __init__.py  base.py  task1_eligibility.py  task2_prior_auth.py  task3_cob_dispute.py
tests/: test_terminal_reward.py
